--- a/doc/references.bib
+++ b/doc/references.bib
@@ -37,3 +37,11 @@
 	pages     = {292--314}
 }
 
+@manual{gds,
+	title        = {Neo4j Graph Data Science Library Manual},
+	author       = {{Neo4j, Inc.}},
+	year         = {2025},
+	version      = {2.22},
+	note         = {Online documentation and software plugin},
+	url          = {https://neo4j.com/docs/graph-data-science/current/}
+}
