--- a/doc/essay.tex
+++ b/doc/essay.tex
@@ -547,7 +547,7 @@ The usage of centrality measures, as it will be seen, can be exploited to see ho
 
 \begin{table}[ht]
 	\centering
-	\setlength{\tabcolsep}{4pt}
+	\setlength{\tabcolsep}{3.9pt}
 	\begin{tabular}{|llcccc|}
 		\toprule
 		\multirow{2}{*}{Board} & \multirow{2}{*}{Metric} & \multicolumn{4}{c}{Centrality Measure} \\
@@ -569,6 +569,10 @@ The usage of centrality measures, as it will be seen, can be exploited to see ho
 		\multirow{2}{*}{$4 \times 7$} 
 		& Correlation & \textbf{-0.9098}*** & -0.8204*** & -0.8596*** & -0.5842** \\
 		& $p$-value   & 0.0000 & 0.0000 & 0.0000 & 0.0011 \\
+		\midrule
+		\multirow{2}{*}{$5 \times 6$} 
+		& Correlation & -0.7353* & -0.4310 & \textbf{-0.7729}* & -0.5072 \\
+		& $p$-value   & 0.0240 & 0.2468 & 0.0146 & 0.1634 \\
 		\bottomrule
 	\end{tabular}
 	\caption{Correlation coefficients ($r$) and $p$-values between Hamiltonian paths and centrality measures across different board sizes.}
