--- a/doc/essay.tex
+++ b/doc/essay.tex
@@ -18,6 +18,7 @@
 \usepackage[font=small,labelfont=bf,labelsep=colon,justification=centering]{caption}
 \captionsetup[table]{position=bottom} % put captions below tables
 \tcbuselibrary{theorems}
+\graphicspath{{assets/}}
 
 \newtheorem{definition}{Definition}[section]
 
@@ -543,7 +544,7 @@ Table \ref{tab:sols} shows a collection of the number of solutions for boards th
 \end{table}
 
 \subsubsection{Starting Nodes}
-The usage of centrality measures, as it will be seen, can be exploited to see how it relates to starting nodes. More specifically, it has been examined the relationships between the number of paths starting from a certain node $v_{i, j}$ and its centrality measures. In order to do so, Pearson's correlation has been analyzed - to find trends between these two variables. In order to make the analysis statistically significant, the relative \textit{p}-values are also analyzed to understand the likelihood of the findings. The results of the experiments can be found on Table \ref{tab:correlations}.
+The usage of centrality measures, as it will be seen, can be exploited to see how it relates to starting nodes. More specifically, it has been examined the relationships between the number of paths starting from a certain node $v_{i, j}$ and its centrality measures. In order to do so, Pearson's correlation has been analyzed - to find trends between these two variables. In order to make the analysis statistically significant, the relative \textit{p}-values are also analyzed to understand the likelihood of the findings. The results of the experiments can be found on Table \ref{tab:correlations}, while an example can be seen in Figure \ref{fig:centrality}.
 
 \begin{table}[ht]
 	\centering
@@ -581,6 +582,13 @@ The usage of centrality measures, as it will be seen, can be exploited to see ho
 
 First of all, to comment these results, it can be easily seen that most of them - except a few - can be declared conclusive, thanks to the very low $p$-values.
 Then, these results may seem counter-intuitive at first: they indicate that the higher the centrality values of a certain node, the lesser the number of Winning Paths will span starting from it. This, however, may be justified by the fact that starting from a more central node - for the beetweness centrality, a \textit{bottleneck} - may occlude more paths rather than starting from a more unreachable node.
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=1.0\linewidth]{centrality.png}
+	\caption{The values of the betweenness centrality for an $8 \times 8$ board.}
+	\label{fig:centrality}
+\end{figure}
 
 \section{Conclusion and Future Work}
 This work has presented a comprehensive graph-based analysis of the solution space in the game of \textit{Diplomatico}. By modeling the puzzle as a Board Graph and leveraging both Neo4J and Python implementations, we have demonstrated the exponential complexity inherent in enumerating Hamiltonian paths and provided empirical benchmarks for several search strategies. The results highlight the effectiveness of advanced graph database procedures (such as APOC) and heuristic-driven algorithms (notably Warnsdorff's rule) in efficiently navigating large solution spaces. 
